@@ -2,6 +2,7 @@
 #ifndef DATA_H
 #define DATA_H
 
-extern ret_code   data_dir( int, struct asm_tok[], struct asym * );
+extern ret_code data_dir( int, struct asm_tok[], struct asym * );
+extern ret_code InitStructuredVar( int, struct asm_tok[], const struct dsym *, struct expr *, struct asym * );
 
 #endif
